# BinkyDivider

./: CMakeLists.txt  divider.c  quadrature.pio
.github/workflows/: cmake-single-platform.yml
